--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="vendors/adminlte_v2.3/css/skins/_all-skins.min.css">
-    <!-- Custom  -->
-    <link href="assets/css/custom.css" rel="stylesheet">
+    <!-- Custom -->
+    <link href="assets/css/custom.css" rel="stylesheet"> 
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,7 +29,7 @@
   </head>
   <body>
     <div id="masthead" class="site-header" role="banner">
-     <div class="header-top">
+     <div class="info-top">
       <div class="container-fluid">
       <div class="col-xs-12 col-sm-6 col-md-8 ">
          <div class="contact-area">
@@ -65,7 +66,7 @@
         </button>
         </div>
         <ul id="navi">
-        <!--<li class="dropdown shop-cart">
+                <li class="dropdown shop-cart">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
                   <span class="cart">10
                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -103,13 +104,13 @@
                     <li class="divider"></li>
                     <li><a class="btn btn-primary" href="">Lihat Keranjang</a></li>
                     </ul>
-              </li>-->
-            <li class="dropdown user user-menu">
+              </li>
+              <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <img src="vendors/adminlte_v2.3/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span id="nama-user">Alexander Pierce</span>
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu dropdown-user">
             
                   <li class="user-header">
                     <img src="vendors/adminlte_v2.3/img/user2-160x160.jpg" class="img-circle" alt="User Image">
@@ -219,7 +220,7 @@
                   <img src="vendors/adminlte_v2.3/img/user2-160x160.jpg" class="user-image" alt="User Image">
                   <span class="hidden-xs">Alexander Pierce</span>
                 </a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu dropdown-user">
             
                   <li class="user-header">
                     <img src="vendors/adminlte_v2.3/img/user2-160x160.jpg" class="img-circle" alt="User Image">
